fixed spacing between header and list items in the section

--- a/des157/styles.css
+++ b/des157/styles.css
@@ -178,6 +178,10 @@ main .section a {
 	
 }
 
+.section h2 {
+	margin-bottom: 0;
+}
+
 .section li {
 	padding: .5em 0;
 	list-style-type: none;
